[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://tracepixel.png" type="Texture" id=2]
[ext_resource path="res://toppng.com-white-circle-png-new-moon-phase-drawi-2400x2400.png" type="Texture" id=3]
[ext_resource path="res://mixkit-video-game-win-2016.ogg" type="AudioStream" id=4]
[ext_resource path="res://mixkit-retro-arcade-lose-2027.ogg" type="AudioStream" id=5]
[ext_resource path="res://mixkit-coins-handling-1939.wav" type="AudioStream" id=6]
[ext_resource path="res://catcher_buttongroup.tres" type="ButtonGroup" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 900, 300 )
scale = Vector2( 3050, 1 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.901961, 0.952941, 0, 1 )
position = Vector2( 525, 300 )
scale = Vector2( 1, 100 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
modulate = Color( 0.901961, 0.952941, 0, 1 )
position = Vector2( 600, 300 )
scale = Vector2( 1, 100 )
texture = ExtResource( 2 )

[node name="Node" type="Node" parent="."]

[node name="Node2" type="Node" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 200.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_top = 550.0
margin_right = 300.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 908.0
margin_top = 7.0
margin_right = 1008.0
margin_bottom = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
margin_left = 800.0
margin_top = 550.0
margin_right = 1000.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spritedot" type="Sprite" parent="."]
position = Vector2( -100, 300 )
scale = Vector2( 0.004, 0.024 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayerW" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioStreamPlayerL" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioStreamPlayerS" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Catcher" type="Node" parent="."]

[node name="Catcher2" type="Node" parent="."]

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 600.0
margin_bottom = 120.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Input the number of distributions that you think these points came from:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 250.0
margin_bottom = 115.0
rect_scale = Vector2( 2, 2 )
text = "Adjust Catcher Width:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="."]
visible = false
margin_left = 100.0
margin_top = 130.0
margin_right = 174.0
margin_bottom = 154.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox2" type="SpinBox" parent="."]
visible = false
margin_left = 100.0
margin_top = 130.0
margin_right = 174.0
margin_bottom = 154.0
rect_scale = Vector2( 2, 2 )
min_value = 1.0
max_value = 1000.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
visible = false
margin_left = 100.0
margin_top = 130.0
margin_right = 318.0
margin_bottom = 154.0
rect_scale = Vector2( 1.5, 1.5 )
group = ExtResource( 7 )
text = "Catcher Width 150, Cost $150"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="."]
visible = false
margin_left = 100.0
margin_top = 160.0
margin_right = 318.0
margin_bottom = 184.0
rect_scale = Vector2( 1.5, 1.5 )
group = ExtResource( 7 )
text = "Catcher Width 300, Cost $250"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox3" type="CheckBox" parent="."]
visible = false
margin_left = 100.0
margin_top = 190.0
margin_right = 318.0
margin_bottom = 214.0
rect_scale = Vector2( 1.5, 1.5 )
group = ExtResource( 7 )
text = "Catcher Width 450, Cost $300"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="RichTextLabel5" to="." method="_on_RichTextLabel5_mouse_entered"]
[connection signal="mouse_exited" from="RichTextLabel5" to="." method="_on_RichTextLabel5_mouse_exited"]
[connection signal="mouse_entered" from="SpinBox2" to="." method="_on_SpinBox2_mouse_entered"]
[connection signal="mouse_exited" from="SpinBox2" to="." method="_on_SpinBox2_mouse_exited"]
[connection signal="button_down" from="CheckBox" to="." method="_on_CheckBox_button_down"]
[connection signal="mouse_entered" from="CheckBox" to="." method="_on_CheckBox_mouse_entered"]
[connection signal="mouse_exited" from="CheckBox" to="." method="_on_CheckBox_mouse_exited"]
[connection signal="button_down" from="CheckBox2" to="." method="_on_CheckBox2_button_down"]
[connection signal="mouse_entered" from="CheckBox2" to="." method="_on_CheckBox2_mouse_entered"]
[connection signal="mouse_exited" from="CheckBox2" to="." method="_on_CheckBox2_mouse_exited"]
[connection signal="button_down" from="CheckBox3" to="." method="_on_CheckBox3_button_down"]
[connection signal="mouse_entered" from="CheckBox3" to="." method="_on_CheckBox3_mouse_entered"]
[connection signal="mouse_exited" from="CheckBox3" to="." method="_on_CheckBox3_mouse_exited"]
